<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/choose_your_level"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/green"
            android:text="@string/easy"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="-40dp" />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/medium"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="40dp" />

        <Button
            android:id="@+id/btnHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/hard"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="120dp" />

        <Button
            android:id="@+id/btnVeryHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:text="@string/very_hard"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="200dp" />

        <Button
            android:id="@+id/btnQGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/go_back"
            android:textSize="15sp"
            android:textStyle="bold"
            android:translationY="280dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>